style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
.container {
  margin: 10px 10px 0px 10px;
}
.nav-wrapper {
  position: fixed;
  top: 0;
  width: 100%;
}

.navbar {
  background-color: aqua;
  padding: 10px;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

a {
  text-decoration: none;
}

button:hover {
  background-color: #0c7321;
  color: rgb(0, 0, 0);
}
.main {
  display: grid;
  grid-template-columns: 1fr 10fr 1fr;
  gap: 30px;
  text-align: center;
  margin-top: 90px;
}

.green {
  background-color: aqua;
}

.grid {
  display: grid;
  row-gap: 20px;
  margin: 4px;
  grid-template-rows: 1fr 1fr 1fr 1fr;
}

.project-column {
  background-color: aqua;
  border-radius: 3px;

  height: 400px;
}

img {
  width: 300px;
  height: 300px;
  border: solid 3px rgb(222, 203, 203);
}

.display-flex {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}
hr {
  margin-inline: 22%;

  height: 3px;
}

